added firebase firestore and firebase auth into project

--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -3,17 +3,17 @@
   margin: 60px auto;
   padding: 20px;
 }
+.login-form h2 {
+  margin-bottom: 30px;
+}
 .login-form label {
   display: block;
-  margin: 30px auto;
-}
-.login-form span {
-  display: block;
-  margin-bottom: 6px;
+  margin: 0 auto;
 }
 .login-form input {
   padding: 8px 6px;
   font-size: 1em;
   color: #777;
   width: 100%;
+  margin-bottom: 30px;
 }
